# yaf2q

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
doc/: build.sh
doc/source/: conf.py  modules.rst  tutorial_jp.md  yaf2q.optimizer.rst  yaf2q.rst
doc/tutorial/jp/: main.md
docs/: genindex.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  tutorial_en.html  tutorial_jp.html  yaf2q.html  yaf2q.optimizer.html
docs/_sources/: index.rst.txt  introduction.md.txt  tutorial.md.txt  tutorial_en.md.txt
docs/_sources/tutorial/jp/: main.md.txt
docs/tutorial/jp/: main.html
docs_src/source/: tutorial_jp.md
examples/: circuit_optimization.py  fermion_to_qubit_operator.py  named_mapper.py  pauli_weight_optimization.py  ternary_tree_mapper.py  ternary_tree_mapper_random.py
src/: binary_matrix.rs  f2q_mapper.rs  fermion_operator.rs  lib.rs  qubit_operator.rs  ternary_tree_spec.rs  transform_constant.rs  transform_coulomb_exchange_ops.rs  transform_double_excitation_ops.rs  transform_excitation_ops.rs  transform_number_excitation_ops.rs  transform_number_ops.rs  util.rs
tests/: conftest.py  fixture.py  test_f2q_mapper.py  test_qubit_operator_set.py  test_sa.py  test_ternary_tree_spec.py
yaf2q/: __init__.py  f2q_mapper.py  qubit_operator_set.py  ternary_tree_spec.py
yaf2q/optimizer/: sa.py
