[package]
name = "yaf2q"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yaf2q"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "num-complex"] }
approx = "0.5.1"
clap = { version = "4.5.39", features = ["derive"] }
regex = "1.11.1"
float-cmp = "0.10"
num-complex = "0.4"
ndarray = "0.16.0"
rand = "0.9"
