[build-system]
requires = ["maturin>=1.9,<2.0","pyo3-pack>=0.3,<0.7"]
build-backend = "maturin"

[project]
name = "yaf2q"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "openfermion",
    "openfermionpyscf",
    "qiskit",
    "qiskit-aer",
    "scipy",
    "pydot",
    "matplotlib",
    "networkx",
]
